@@ -47,7 +47,32 @@ tags = {
             'albumartist' : 'aART',
             'disk'        : 'disk',
             'comment'     : '\xa9cmt',
-
+            },
+        '.mp4': {
+            'artist'      : '\xa9ART',
+            'album'       : '\xa9alb',
+            'title'       : '\xa9nam',
+            'genre'       : '\xa9gen',
+            'year'        : '\xa9day',
+            'tracknumber' : 'trkn',
+            'composer'    : '\xa9wrt',
+            'lyrics'      : '\xa9lyr',
+            'albumartist' : 'aART',
+            'disk'        : 'disk',
+            'comment'     : '\xa9cmt',
+            },
+        '.aac': {
+            'artist'      : '\xa9ART',
+            'album'       : '\xa9alb',
+            'title'       : '\xa9nam',
+            'genre'       : '\xa9gen',
+            'year'        : '\xa9day',
+            'tracknumber' : 'trkn',
+            'composer'    : '\xa9wrt',
+            'lyrics'      : '\xa9lyr',
+            'albumartist' : 'aART',
+            'disk'        : 'disk',
+            'comment'     : '\xa9cmt',
             },
         '.ogg': {
             'artist'      : 'artist',
